tests/errors/math.sqrt_expects_1_argument.b
import math;

fn main() {
    result := math.sqrt(4.0, 2.0);
}
